2009-12-11  Adam Roben  <aroben@apple.com>

        Windows build fix for systems with spaces in their paths

        * JavaScriptCore.vcproj/JavaScriptCore/build-generated-files.sh: Quote some paths.

2009-12-11  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Adam Roben.

        Add check for presence of QuartzCore headers
        https://bugs.webkit.org/show_bug.cgi?id=31856
        
        The script now checks for the presence of QuartzCore.h. If present
        it will turn on ACCELERATED_COMPOSITING and 3D_RENDERING to enable
        HW compositing on Windows. The script writes QuartzCorePresent.h to
        the build directory which has a define telling whether QuartzCore is 
        present.

        * JavaScriptCore.vcproj/JavaScriptCore/build-generated-files.sh:
        * wtf/Platform.h:

2009-12-11  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Fix a problem that JSC::gregorianDateTimeToMS() returns a negative
        value for a huge year value.
        https://bugs.webkit.org/show_bug.cgi?id=32304

        * wtf/DateMath.cpp:
        (WTF::dateToDaysFrom1970): Renamed from dateToDayInYear, and changed the return type to double.
        (WTF::calculateDSTOffset): Follow the dateToDaysFrom1970() change.
        (WTF::timeClip): Use maxECMAScriptTime.
        (JSC::gregorianDateTimeToMS): Follow the dateToDaysFrom1970() change.

2009-12-10  Adam Barth  <abarth@webkit.org>

        No review, rolling out r51975.
        http://trac.webkit.org/changeset/51975

        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):
        * runtime/JSString.h:
        (JSC::JSString::JSString):
        (JSC::JSString::appendStringInConstruct):
        * runtime/Operations.cpp:
        (JSC::jsAddSlowCase):
        * runtime/Operations.h:
        (JSC::jsString):
        (JSC::jsAdd):

2009-12-10  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.
